Replace command line parser with ArgParser4J library